# astro-test-package

./: .gitignore  README.md  pyproject.toml
notebooks/: test.ipynb
src/astro_test_package/: __init__.py  astro_analyzer.py
