[project]
name = "astro_test_package"
version = "0.0.1"
authors = [
  { name="Mikhail Krivonosov", email="mike_live@mail.ru" },
]
description = "Astro test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/mike-live/astro-test-package"
Issues = "https://github.com/mike-live/astro-test-package/issues"